Update room database setup with destructive migration and schema export
*   Adds `fallbackToDestructiveMigration(true)` to Room database builder for both Android and iOS.
*   Sets `exportSchema = true` for `AppDatabase`.
*   Applies the `room` plugin.
*   Adds schema directory configuration for `room` in `composeApp/build.gradle.kts`

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -55,3 +55,4 @@ kotlinxSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", versi
 googleServices = { id = "com.google.gms.google-services", version.ref = "gradlePlugins-google-services" }
 crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "gradlePlugins-crashlytics" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+room = { id = "androidx.room", version.ref = "roomKtx" }
