--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
 agp = "8.6.1"
-androidx-activityCompose = "1.9.3"
+androidx-activityCompose = "1.10.0"
 androidx-ui-tooling = "1.7.6"
 coil = "3.0.0"
-compose-multiplatform = "1.7.1"
+compose-multiplatform = "1.7.3"
 kermit = "2.0.5"
-koin = "4.0.0"
+koin = "4.0.2"
 kotlin = "2.1.0"
 ktor = "3.0.1"
 navigationCompose = "2.8.0-alpha11"
@@ -13,10 +13,12 @@ gradlePlugins-google-services = "4.4.2"
 gradlePlugins-crashlytics = "3.0.2"
 firebase-gitlive-sdk = "2.1.0"
 pagingCommon = "3.3.5"
+pagingCashApp = "3.3.0-alpha02-0.5.1"
 richeditorCompose = "1.0.0-rc10"
 roomKtx = "2.7.0-alpha12"
 ksp = "2.1.0-1.0.29"
 datetime = "0.6.0"
+sqlite = "2.5.0-SNAPSHOT"
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
@@ -43,8 +45,9 @@ datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime", version
 gitlive-firebase-kotlin-crashlytics = { module = "dev.gitlive:firebase-crashlytics", version.ref = "firebase-gitlive-sdk" }
 gitlive-firebase-kotlin-analytics = { module = "dev.gitlive:firebase-analytics", version.ref = "firebase-gitlive-sdk" }
 paging-common = { module = "androidx.paging:paging-common", version.ref = "pagingCommon" }
-paging-compose-common = { module = "androidx.paging:paging-compose", version.ref = "pagingCommon" }
+paging-compose-common = { module = "app.cash.paging:paging-compose-common", version.ref = "pagingCashApp" }
 richeditor-compose = { module = "com.mohamedrejeb.richeditor:richeditor-compose", version.ref = "richeditorCompose" }
+sqlite-bundled = { module = "androidx.sqlite:sqlite-bundled", version.ref = "sqlite" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
