--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 agp = "8.6.1"
 androidx-activityCompose = "1.10.0"
-androidx-ui-tooling = "1.7.6"
+androidx-ui-tooling = "1.7.7"
 coil = "3.0.0"
 compose-multiplatform = "1.7.3"
 kermit = "2.0.5"
@@ -11,15 +11,16 @@ kotlin = "2.1.0"
 ktor = "3.0.1"
 navigationCompose = "2.8.0-alpha11"
 gradlePlugins-google-services = "4.4.2"
-gradlePlugins-crashlytics = "3.0.2"
+gradlePlugins-crashlytics = "3.0.3"
 firebase-gitlive-sdk = "2.1.0"
 pagingCommon = "3.3.5"
 pagingCashApp = "3.3.0-alpha02-0.5.1"
 richeditorCompose = "1.0.0-rc10"
-roomKtx = "2.7.0-alpha12"
+roomKtx = "2.7.0-alpha13"
 ksp = "2.1.0-1.0.29"
 datetime = "0.6.0"
 sqlite = "2.5.0-SNAPSHOT"
+koin-annotation = "2.0.0-RC1"
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
@@ -44,6 +45,8 @@ ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "kto
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime", version.ref = "datetime" }
+koin-annotation = { module = "io.insert-koin:koin-annotations", version.ref = "koin-annotation" }
+koin-ksp-compiler = { module = "io.insert-koin:koin-ksp-compiler", version.ref = "koin-annotation" }
 
 #Gitlive
 gitlive-firebase-kotlin-crashlytics = { module = "dev.gitlive:firebase-crashlytics", version.ref = "firebase-gitlive-sdk" }
