--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,7 +18,7 @@ ksp = "2.1.0-1.0.29"
 datetime = "0.6.0"
 sqlite = "2.5.0-SNAPSHOT"
 decompose = "3.3.0-alpha03"
-essenty = "2.4.0"
+essenty = "2.5.0-beta01"
 kotlininject = "0.7.2"
 kotlin-inject-anvil = "0.1.2"
 
@@ -46,6 +46,7 @@ decompose-compose = { module = "com.arkivanov.decompose:extensions-compose", ver
 decompose-compose-experimental = { module = "com.arkivanov.decompose:extensions-compose-experimental", version.ref = "decompose" }
 essenty-coroutines = { module = "com.arkivanov.essenty:lifecycle-coroutines", version.ref = "essenty" }
 essenty-lifecycle = { module = "com.arkivanov.essenty:lifecycle", version.ref = "essenty" }
+essenty_backhandler = { module = "com.arkivanov.essenty:back-handler", version.ref = "essenty" }
 
 kotlinInject-anvil-compiler = { group = "software.amazon.lastmile.kotlin.inject.anvil", name = "compiler", version.ref = "kotlin-inject-anvil" }
 kotlinInject-anvil-runtime = { group = "software.amazon.lastmile.kotlin.inject.anvil", name = "runtime", version.ref = "kotlin-inject-anvil" }
