--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,8 +11,8 @@ ktor = "3.0.1"
 gradlePlugins-google-services = "4.4.2"
 gradlePlugins-crashlytics = "3.0.3"
 firebase-gitlive-sdk = "2.1.0"
+multiplatformMarkdown = "0.30.0"
 pagingCommon = "3.3.5"
-richeditorCompose = "1.0.0-rc10"
 roomKtx = "2.7.0-alpha13"
 ksp = "2.1.0-1.0.29"
 datetime = "0.6.0"
@@ -58,8 +58,8 @@ kotlinInject-compiler = { module = "me.tatarka.inject:kotlin-inject-compiler-ksp
 #Gitlive
 gitlive-firebase-kotlin-crashlytics = { module = "dev.gitlive:firebase-crashlytics", version.ref = "firebase-gitlive-sdk" }
 gitlive-firebase-kotlin-analytics = { module = "dev.gitlive:firebase-analytics", version.ref = "firebase-gitlive-sdk" }
+markdown = { module = "com.mikepenz:multiplatform-markdown-renderer-m3", version.ref = "multiplatformMarkdown" }
 paging-common = { module = "androidx.paging:paging-common", version.ref = "pagingCommon" }
-richeditor-compose = { module = "com.mohamedrejeb.richeditor:richeditor-compose", version.ref = "richeditorCompose" }
 sqlite-bundled = { module = "androidx.sqlite:sqlite-bundled", version.ref = "sqlite" }
 
 [bundles]
