--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,5 @@ org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8
 android.nonTransitiveRClass=true
 android.useAndroidX=true
 org.gradle.configuration-cache=true
+org.gradle.parallel=true
+org.gradle.caching=true
