feat: Update dependency configurations and add serialization support
- Changed `api` to `implementation` for `ktorClientBundle` in `network/api` module.
- Changed `implementation` to `api` for `ktorClientBundle` in `network/implementation` module.
- Added `serialization` library to `libs.versions.toml`.
- Added `serialization` to `commonMain.dependencies` in `games/data` module.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -28,6 +28,7 @@ decompose = "3.3.0-alpha03"
 essenty = "2.5.0-beta01"
 kotlininject = "0.7.2"
 kotlin-inject-anvil = "0.1.2"
+serialization = "1.8.0"
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
@@ -43,6 +44,7 @@ kermit = { module = "co.touchlab:kermit", version.ref = "kermit" }
 kmpauth-firebase = { module = "io.github.mirzemehdi:kmpauth-firebase", version.ref = "kmpauth" }
 kmpauth-google = { module = "io.github.mirzemehdi:kmpauth-google", version.ref = "kmpauth" }
 kmpauth-uihelper = { module = "io.github.mirzemehdi:kmpauth-uihelper", version.ref = "kmpauth" }
+serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "serialization" }
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor" }
