feat: Refactor user management and authentication modules
This commit introduces significant changes to the project's structure and the handling of user data and authentication:

-   **User Module:**
    -   Created a new `feature/user` module with submodules for `data`, `domain`, and `ui`.
    -   Moved user-related classes like `UserUiModel`, `FirebaseUserRemoteDataSource`, `UserDto`, `UserDataRepository`, and `UserDomainModel` into the `feature/user` module.
    -   Added `UsersRemoteDataSource` interface to `feature/user/data` for user data fetching.
    -   Added `UserRepository` interface and `UserDomainModel` to `feature/user/domain`.
    -   Created a `feature/user/ui` for UI-related components.
-   **Auth Module:**
    -   Modified `DefaultLoginPresenter` to import `UserRepository` from `feature/auth/domain`.
    -   Refactored `DefaultTokenRefresher` to use `AuthRemoteDataSource` and `UsersRemoteDataSource`
    -  Updated dependencies in `feature/auth/data` and `feature/auth/ui` to include the user module and kmpauth libraries.
    -   Modified `LoginScreen` to use new `UserUiModel` and added kmpauth google login button.
    - Moved `AuthPresenterFactory` to `typealias`
-   **General:**
    -   Moved `BackAnimation` to `base-ui`.
    -   Refactored DecomposeExt and added LocalScreenTransitionScope and LocalScreenAnimationScope.
    -   Updated `settings.gradle.kts` to include the new user module submodules.
    -   Updated dependencies for several modules.
    -   Removed unused imports and refactored package names.
    - Updated version of kmpauth libraries.
    - Introduced new libraries `kmpauth-firebase` to the project.
    - Replaced `Firebase.auth` with `firebaseAuth` variable.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -45,6 +45,7 @@ coil-network-ktor = { group = "io.coil-kt.coil3", name = "coil-network-ktor3", v
 kermit = { module = "co.touchlab:kermit", version.ref = "kermit" }
 kmpauth-google = { module = "io.github.mirzemehdi:kmpauth-google", version.ref = "kmpauth" }
 kmpauth-uihelper = { module = "io.github.mirzemehdi:kmpauth-uihelper", version.ref = "kmpauth" }
+kmpauth-firebase = { module = "io.github.mirzemehdi:kmpauth-firebase", version.ref = "kmpauth" }
 serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "serialization" }
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
