feat: Introduce `CustomResult` and refactor network layer
This commit introduces a new `CustomResult` type and refactors the network layer to use it, enhancing error handling and consistency:

-   **`CustomResult` Introduction:**
    -   Created a new `CustomResult` typealias in the `base` module, representing a `Result` from the `kotlin-result` library, to handle success and error scenarios.
-   **Network Layer Refactor:**
    -   Modified `KtorNetworkClient` in the `network-implementation` module to return `CustomResult<T, Throwable>` instead of `Result<T>`.
    -   Updated the `performRequest` function in `KtorNetworkClient` to use `Ok` and `Err` from `kotlin-result`.
    -   Updated `NetworkClient` in the `network-api` module to use `CustomResult<T, Throwable>` in its interface.
    - Updated `NetworkClient`'s extension functions `get`, `post`, `delete` to use `CustomResult<T, Throwable>`.
-   **Dependency Updates:**
    -   Added the `kotlin-result` dependency to the `base` module.
    -   Updated `network-api` and `network-implementation` dependencies to include the base module.
    - Updated `libs.versions.toml` with new `kotlinResult` version.
- **Other**
    - Update imports and remove unused ones.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 compileSdk = "35"
 coroutines = "1.10.1"
+kotlinResult = "2.0.1"
 targetSdk = "35"
 minSdk = "29"
 jdk = "21"
@@ -37,6 +38,7 @@ androidx-compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", versi
 androidx-compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "androidx-ui-tooling" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomKtx" }
 coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
+kotlin-result = { module = "com.michael-bull.kotlin-result:kotlin-result", version.ref = "kotlinResult" }
 room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomKtx" }
 androidx-room-paging = { module = "androidx.room:room-paging", version.ref = "roomKtx" }
 androidx-security-crypto = { module = "androidx.security:security-crypto", version.ref = "securityCrypto" }
