--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,4 @@ android.useAndroidX=true
 org.gradle.configuration-cache=true
 org.gradle.parallel=true
 org.gradle.caching=true
+kotlin.native.ignoreDisabledTargets=true
