feat: Update CircleCI executor configuration to include version tag

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,9 @@ orbs:
 
 jobs:
   test:
-    executor: android/android-machine
+    executor:
+      name: android/android-machine
+      tag: 2023.07.1
     steps:
       - checkout
       - android/restore-gradle-cache:
