--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,11 +3,18 @@ version: 2.1
 orbs:
   android: circleci/android@2.3.0
 
+executors:
+  android-docker:
+    docker:
+      - image: cimg/android:2023.08
+    environment:
+      JVM_OPTS: -Xmx3200m
+      GRADLE_OPTS: "-Dorg.gradle.daemon=false"
+    resource_class: medium
+
 jobs:
   test:
-    executor:
-      name: android/android-machine
-      tag: 2023.07.1
+    executor: android-docker
     steps:
       - checkout
       - android/restore-gradle-cache:
