feat: Update .gitignore to exclude specific JSON file

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ captures
 !*.xcworkspace/contents.xcworkspacedata
 **/xcshareddata/WorkspaceSettings.xcsettings
 /bardy-upload-keystore
+bardy-452512-f6dbb788ec5a.json
