feat: Update CircleCI configuration to use Android executor for testing

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,14 @@
 version: 2.1
-executors:
-  java21:
-    docker:
-      - image: 'cimg/openjdk:21.0'
 orbs:
   android: circleci/android@2.3.0
   ruby: circleci/ruby@1.8.0
 
 jobs:
   test:
-    executor: java21
+    executor:
+      name: android/android-machine
+      resource-class: medium
+      tag: 2024.01.1
     steps:
       - checkout
 
