--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
 jobs:
   test:
     executor:
-      name: android/android-docker
+      name: android/android_machine
       resource-class: medium
       tag: 2024.01.1
     steps:
