--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,8 +85,8 @@ workflows:
     jobs:
       - test
       - deploy:
-          requires:
-            - test
+          #          requires:
+          #            - test
           filters:
             branches:
               only: main
