--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ captures
 **/xcshareddata/WorkspaceSettings.xcsettings
 /bardy-upload-keystore
 bardy-452512-f6dbb788ec5a.json
+fastlane/readme.md
+fastlane/report.xml
+
