--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,7 +21,7 @@ firebase-gitlive-sdk = "2.1.0"
 multiplatformMarkdown = "0.30.0"
 multiplatformSettings = "1.3.0"
 pagingCommon = "3.3.6"
-roomKtx = "2.7.0-alpha13"
+roomKtx = "2.7.1"
 ksp = "2.1.10-1.0.29"
 datetime = "0.6.1"
 securityCrypto = "1.1.0-alpha06"
