--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,7 +25,7 @@ roomKtx = "2.7.1"
 ksp = "2.1.20-1.0.32"
 datetime = "0.6.1"
 securityCrypto = "1.1.0-alpha07"
-sqlite = "2.5.0-SNAPSHOT"
+sqlite = "2.5.1"
 decompose = "3.3.0-alpha03"
 essenty = "2.5.0-beta01"
 kotlininject = "0.7.2"
