--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,7 +27,7 @@ datetime = "0.6.2"
 securityCrypto = "1.1.0-alpha07"
 sqlite = "2.5.1"
 decompose = "3.3.0-alpha03"
-essenty = "2.5.0-beta01"
+essenty = "2.5.0"
 kotlininject = "0.8.0"
 kotlin-inject-anvil = "0.1.6"
 serialization = "1.8.1"
